--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "nodemon index.js"
   },
   "author": "",
-  "license": "ISC", 
+  "license": "ISC",
   "dependencies": {
     "Router": "^2.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-querybuilder": "^2.1.1",
+    "nodemon": "^2.0.12"
   }
 }
- 
