--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon index.js",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "Router": "^2.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "localtunnel": "^2.0.2",
     "mysql": "^2.18.1",
     "node-querybuilder": "^2.1.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "Router": "^2.1.0"
   }
 }
